# maketest

Autotools/: README
Autotools/justfile/: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac  helloworld  helloworld.c
Autotools/justfile/.deps/: helloworld.Po
Autotools/justfile/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
Autotools/moredir/: Makefile.am  configure.ac
Autotools/moredir (copy)/: Makefile  Makefile.in  config.h  config.status  configure  libtool
Autotools/moredir (copy)/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
Autotools/moredir (copy)/lib/: Makefile  Makefile.am  Makefile.in  libltso.la  ltso.h  ltso.lo
Autotools/moredir (copy)/lib/.deps/: ltso.Plo
Autotools/moredir (copy)/lib/.libs/: libltso.la
Autotools/moredir (copy)/src/: Makefile  Makefile.am  Makefile.in  test_1  test_1.c  test_2
Autotools/moredir (copy)/src/.deps/: test_1-test_1.Po  test_2-test_2.Po
Autotools/moredir (copy)/stalib/: Makefile  Makefile.am  Makefile.in  lta.h
Autotools/moredir (copy)/stalib/.deps/: lta.Po
Autotools/moredir/lib/: ltso.c
Autotools/moredir/src/: Makefile.am  test_2.c
Autotools/moredir/stalib/: lta.c
Cmakelist/justfile/: CMakeLists.txt  README
Cmakelist/justfile/src/: main.c
Cmakelist/morefiles/: CMakeLists.txt
Cmakelist/morefiles/lib/: CMakeLists.txt  lta.c  ltso.c
Cmakelist/morefiles/src/: main.c
