#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

# Autoconfig version
AC_PREREQ([2.69])

# Package info
AC_INIT([Helloworld], [1.0], [BUG-REPORT-ADDRESS])


AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Check 
AC_CONFIG_SRCDIR([helloworld.c])

# config.h
AC_CONFIG_HEADERS([config.h])

# Checks for programs. gcc
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
