AUTOMARK_OPTIONS = foreign


noinst_PROGRAMS= test_1 test_2

test_1_SOURCES = test_1.c
test_1_CPPFLAGS = -I../lib -I../stalib
test_1_LDADD = ../stalib/liblta.a
test_1_LDADD += ../lib/libltso.la

test_2_SOURCES = test_2.c
test_2_CPPFLAGS = -I../lib -I../stalib
test_2_LDADD = ../stalib/liblta.a
test_2_LDADD += ../lib/libltso.la


